# aro-audit

./: .gitignore  CITATION.cff  CONTRIBUTING.md  COPYRIGHT  NOTICE  README.md  TRADEMARK_POLICY.md  cli.py  explainer.py  mypy.ini  pFDO_controlplane_case.yaml  pFDO_strong_anchor.yaml  pyproject.toml  requirements.txt  setup.cfg  test_output.txt  validator.py  viz.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  sovereign_check.py
.github/ISSUE_TEMPLATE/: rc1-review.yml
.github/workflows/: audit_probe.yml  ci.yml  conformance.yml  exploit.yml  monitor.yml  quality-baseline.yml  sovereign_global_audit.yml  spear.yml
aro-audit-v1/: journal.jsonl  org_pubkey_ed25519.pem
aro-audit-v1 2/: AAR-Manifest.json  README.md  verify.py
aro_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aro_audit/vpml/: __init__.py  cli.py  scorer.py  viz.py
business/: README.md
business/templates/: PR_template.md  email_design_partner.txt  release_checklist.md
competition/hicool-2026/: DEFENSE_QA_CN_EN.md  EVIDENCE.md  HICOOL_AegisTrust_BusinessPlan_CN.pptx  MATURITY_PLAN.md  PITCH_15P_CN_EN.md  README.md  generate_hicool_materials.py
config/: mcp_policy.yaml
conformance/: report_generator.sh  run.sh  seccomp_exec_wrapper.c  test_evidence_generation.py  test_persona_consistency.py  test_policy_enforcement.py
demo/: gen_journal.py  journal.jsonl  manifest.json
docs/: AUDIT_REMEDIATION_2026-02-21.md  FDO-Audit-Profile_v1_DraftSpec.md  IP_AND_LICENSE_STRATEGY.md  ONEPAGER_CN.md  aroaudit-profile-v1.md  audit_pitch_5min.md  conformance-vectors-rc1-plus.md  evidence-boundary.md  evidence-object-spec.md  fixture-index.md  layer-position.md  preprint_3-5p.md  preprint_arxiv.aux  preprint_arxiv.out  preprint_arxiv.tex  threat-model.md
examples/: crewai_audit_demo.py  invalid_missing_field.json  minimal_evidence.json  run_ab_compare.sh
fdo-profile/: evidence_object_profile.md  example_evidence_object.json
machine-readable/: repository.json
plugins/: crewai_audit_plugin.py
quickstart/: README.md  expected_output.txt  run.sh
release/: spec_bundle_rc1.zip.sha256
schema/: evidence.schema.json
sdk/cli/: aro.py
spec/: AAR_v1.0.schema.json  CONFORMANCE.md
tests/: test_jcs_canonicalization.py  test_jsonl_journal.py  test_mcp2_verify_chain.py  test_mcp_enforcer.py  test_org_keys.py  test_vpml_scorer.py
tools/: build_hicool_evidence.sh  check_legal.sh  export_bundle.py  python  rc1_issue_followup.sh  rc1_outreach_finalize.sh  rc1_outreach_post.md  rc1_outreach_run.sh  rc1_outreach_targets.txt  run_conformance.sh  setup_env.sh  verify_bundle.py
(+64 files in other folders)
