[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aro-audit"
version = "0.1.0"
description = "ARO/AAR audit tooling (v1.0 baseline)"
requires-python = ">=3.11"
dependencies = [
  "cryptography",
  "jsonschema",
  "duckdb",
  "orjson",
  "typer",
  "rfc8785",
]

[project.scripts]
aro = "sdk.cli.aro:app"
