[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aro-audit"
version = "0.1.0"
description = "ARO/AAR audit tooling (v1.0 baseline)"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cryptography",
  "jsonschema",
  "duckdb",
  "orjson",
  "typer",
  "rfc8785",
]

[project.scripts]
mcp-aar = "sdk.mcp_server_wrapper.wrapper:main"
aro = "sdk.cli.aro:app"
