[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aro-audit"
version = "0.1.0"
description = "ARO/AAR audit tooling (v1.0 baseline)"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cryptography",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage[toml]",
]
lint = [
  "ruff",
  "mypy",
]
security = [
  "pip-audit",
  "bandit",
]

[project.scripts]
mcp-aar = "sdk.mcp_server_wrapper.wrapper:main"
aro = "sdk.cli.aro:app"
aro-vpml = "aro_audit.vpml.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "competition",
  "demo",
  "examples",
  "aro-audit-v1",
  "aro-audit-v1 2",
  "sdk/anchor",
  "sdk/cli",
  "sdk/mcp_server_wrapper",
  "sdk/verify/verify.py",
  "tools",
  "explainer.py",
  "viz.py",
  "aro_audit/vpml/cli.py",
  "aro_audit/vpml/explainer.py",
  "aro_audit/vpml/viz.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"sdk/verify/verify.py" = ["E401", "E402"]
